// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generate a basic model 1`] = `
"import { z } from "zod";

export const AccountSchema = z.object({
	name: z.string().optional(),
	email: z.string(),
});"
`;

exports[`generate a basic model with blob field 1`] = `
"import { z } from "zod";

export const AccountSchema = z.object({
	name: z.string().optional(),
	email: z.string(),
	image: z.any().optional(),
});"
`;

exports[`generate with multiple models 1`] = `
"import { z } from "zod";

export const AccountSchema = z.object({
	name: z.string().optional(),
	email: z.string(),
});
export const PostSchema = z.object({
	title: z.string(),
	describe: z.string().optional(),
});"
`;

exports[`generate with dot notation keys 1`] = `
"import { z } from "zod";

export const AccountSchema = z.object({
	"foo.bar": z.string().optional(),
});"
`;

exports[`generate with no models 1`] = `
"import { z } from "zod";

export {};"
`;
